--- a/css/style.css
+++ b/css/style.css
@@ -458,10 +458,14 @@ body {
   color: #636363;
 }
 
+.checkout {
+  padding: 90px 0 90px 0;
+}
 .checkout__conteiner {
   display: flex;
   padding-left: 35px;
   padding-top: 40px;
+  gap: 320px;
 }
 .checkout__left {
   display: flex;
