--- a/css/style.scss
+++ b/css/style.scss
@@ -1182,10 +1182,10 @@ body {
 
 }
 
-// .propeties {
-//     height: 730px;
-//     background-color: $colortWite;
-// }
+.propeties {
+    height: 730px;
+    background-color: red;
+}
 
 // Блок предложения и скидки
 .offers {
