--- a/css/style.css
+++ b/css/style.css
@@ -961,19 +961,33 @@ body {
 }
 
 .single {
-  background-image: url(../img/photo_main.png);
   background-color: #f7f7f7;
-  background-position: center center;
-  background-repeat: no-repeat;
-  min-height: 777px;
   position: relative;
+  color: #ffffff;
 }
-
-.propeties {
-  top: 690px;
-  height: 730px;
-  background-color: red;
+.single__left {
   position: absolute;
+  background-color: #d8d8d8;
+  top: 50%;
+  left: 0;
+  padding: 16px 20px;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+.single__right {
+  position: absolute;
+  background-color: #d8d8d8;
+  top: 50%;
+  right: 0;
+  padding: 16px 20px;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+.single__photo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 777px;
 }
 
 .offers {
