--- a/css/style.scss
+++ b/css/style.scss
@@ -1174,19 +1174,47 @@ body {
 
 // Страниа single описание одного товара
 .single {
-    background-image: url(../img/photo_main.png);
     background-color: #f7f7f7;
-    background-position: center center;
-    background-repeat: no-repeat;
-    min-height: 777px;
     position: relative;
+    color: $colortWite;
+
+    &__left {
+        position: absolute;
+        background-color: #d8d8d8;
+        top: 50%;
+        left: 0;
+        padding: 16px 20px;
+        transform: translateY(-50%);
+        cursor: pointer;
+    }
+
+    &__right {
+        position: absolute;
+        background-color: #d8d8d8;
+        top: 50%;
+        right: 0;
+        padding: 16px 20px;
+        transform: translateY(-50%);
+        cursor: pointer;
+    }
+    
+    &__photo {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 777px;
+    }
+    // background-image: url(../img/photo_main.png);
+    // background-position: center center;
+    // background-repeat: no-repeat;
+    // min-height: 777px;
+    // position: relative;
 }
 
 .propeties {
-    top: 690px;
-    height: 730px;
-    background-color: red;
-    position: absolute;
+    // height: 730px;
+    // background-color: red;
+    // transform: translateY();
 }
 
 // Блок предложения и скидки
