описание блока свойств

--- a/css/style.css
+++ b/css/style.css
@@ -990,6 +990,18 @@ body {
   height: 777px;
 }
 
+.propeties {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #ffffff;
+  border: 1px solid #eaeaea;
+}
+
+.content {
+  width: 1140px;
+}
+
 .offers {
   padding-top: 98px;
   padding-bottom: 98px;
