--- a/css/style.scss
+++ b/css/style.scss
@@ -589,7 +589,8 @@ body {
         cursor: pointer;
     }
 
-    &__summary {font-size: 16px;
+    &__summary {
+        font-size: 16px;
         line-height: 1.2;
         font-weight: 700;
         text-transform: uppercase;
@@ -1197,13 +1198,14 @@ body {
         transform: translateY(-50%);
         cursor: pointer;
     }
-    
+
     &__photo {
         display: flex;
         flex-direction: column;
         align-items: center;
         height: 777px;
     }
+
     // background-image: url(../img/photo_main.png);
     // background-position: center center;
     // background-repeat: no-repeat;
@@ -1212,9 +1214,16 @@ body {
 }
 
 .propeties {
-    // height: 730px;
-    // background-color: red;
-    // transform: translateY();
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    background-color: #ffffff;
+    border: 1px solid #eaeaea;
+}
+
+.content {
+    width: $contantWidth;
 }
 
 // Блок предложения и скидки
