--- a/css/style.scss
+++ b/css/style.scss
@@ -1218,6 +1218,86 @@ body {
         width: 620px;
         text-align: center;
     }
+
+    &__title {
+        line-height: 24px;
+        font-weight: 700;
+        color: $colorPink;
+        // padding-bottom: 15px;
+    }
+
+    &__block {
+        display: flex;
+        align-items: flex-end;
+    }
+
+    &__gray {
+        width: 147px;
+        border-bottom: 1px solid #eaeaea;
+        padding-top: 16px;
+    }
+
+    &__pink {
+        width: 63px;
+        border-bottom: 3px solid $colorPink
+    }
+
+    &__head {
+        padding-top: 15px;
+        font-size: 18px;
+        line-height: 24px;
+        font-weight: 900;
+        text-transform: uppercase;
+        color: #4d4d4d;
+    }
+
+    &__text {
+        padding-top: 68px;
+        line-height: 24px;
+        font-weight: 300;
+        color: #5e5e5e;
+    }
+
+    &__options {
+        display: flex;
+        gap: 44px;
+        padding-top: 28px;
+        justify-content: center;
+    }
+
+    &__price {
+        padding-top: 36px;
+        padding-bottom: 46px;
+        font-size: 24px;
+        line-height: 24px;
+        font-weight: 700;
+        color: $colorPink;
+    }
+
+    &__hr {
+        width: 642px;
+        border: 1px solid #eaeaea;
+    }
+
+    &__form {
+        padding-top: 62px;
+    }
+
+    &__form-items {
+        display: flex;
+        gap: 52px;
+    }
+
+    &__button {
+        width: 100%;
+        padding-top: 28px;
+    }
+
+    &__button a {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
 }
 
 .content {
@@ -1228,6 +1308,11 @@ body {
     background-color: #ffffff;
     border: 1px solid #eaeaea;
     width: $contantWidth;
+
+    padding-top: 72px;
+    padding-bottom: 120px;
+
+    transform: translateY(-84px);
 }
 
 // Блок предложения и скидки
