--- a/css/style.css
+++ b/css/style.css
@@ -1068,6 +1068,16 @@ body {
 }
 .propeties__summary {
   display: flex;
+  cursor: pointer;
+}
+.propeties__drop {
+  display: flex;
+  border: 1px solid #eaeaea;
+  width: 144px;
+  position: absolute;
+  z-index: 1;
+  background-color: #fff;
+  cursor: pointer;
 }
 .propeties__colors {
   display: flex;
@@ -1077,13 +1087,23 @@ body {
   border: 1px solid #eaeaea;
   width: 144px;
 }
-.propeties__colors-item_ab {
-  position: absolute;
+.propeties__colors_items {
+  border: none;
+  justify-content: flex-start;
 }
 .propeties__colors-item {
   width: 12px;
   height: 12px;
   background-color: #f16d7f;
+}
+.propeties__colors-item_yellow {
+  background-color: yellow;
+}
+.propeties__colors-item_blue {
+  background-color: blue;
+}
+.propeties__colors-text_drop {
+  padding-left: 37px;
 }
 
 .content {
