--- a/css/style.scss
+++ b/css/style.scss
@@ -1335,6 +1335,14 @@ body {
         width: 144px;
     }
 
+    &__colors-text {
+        padding-right: 30px;
+    }
+
+    &__colors-text:hover {
+        color: $colorPink;
+    }
+
     // чтобы небыло горизонтальных линий
     &__colors_items {
         border: none;
@@ -1345,6 +1353,8 @@ body {
         width: 12px;
         height: 12px;
         background-color: $colorPink;
+        margin-right: 37px;
+
     }
 
     &__colors-item_yellow {
@@ -1356,7 +1366,7 @@ body {
     }
 
     &__colors-text_drop {
-        padding-left: 37px;
+        // padding-left: 37px;
     }
 }
 
