--- a/css/style.scss
+++ b/css/style.scss
@@ -198,6 +198,7 @@ body {
 
     &__cart-summary {
         display: flex;
+        cursor: pointer;
     }
 
     // модификатор стиля кнопки Browse
