--- a/css/style.scss
+++ b/css/style.scss
@@ -1541,13 +1541,12 @@ body {
     }
 
     &__card_mod {
-        top: 150px;
+        top: 48px;
         width: 50%;
         display: flex;
         justify-content: center;
-        gap: 5px;
+        gap: 8px;
         position: absolute;
-
     }
 
     &__link {
@@ -1562,6 +1561,11 @@ body {
         pointer-events: all;
         transition: transform 0.5s ease-in-out;
         top: 15px;
+    }
+
+    &__link_mod {
+        padding: 12px 20px;
+        font-size: 20px;
     }
 
     &__link:hover {
